# adventofcode2022

./: .flake8  .pre-commit-config.yaml  pyproject.toml
advent_of_code_2022/: common.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
tests/: test_common.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
