[tool.poetry]
name = "advent_of_code2021"
version = "0.1.0"
description = ""
authors = ["Cédric Roy <cecric.roy@broadsign.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
