[tool.poetry]
name = "advent_of_code2021"
version = "0.1.0"
description = ""
authors = ["Cédric Roy <cecric.roy@broadsign.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120